--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chakra-multiselect",
+  "name": "wxllow-chakra-multiselect",
   "version": "0.4.5",
   "description": "A Multiselect component using ChakraUI",
   "author": "bmartel",
